force-app/main/default/objects/Project_Control_Requirement__c/Project_Control_Requirement__c.object-meta.xml
<CustomObject>
    <label>Project Control Requirement</label>
    <nameField>
        <label>Project Control Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Control Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>