force-app/main/default/objects/Project_Control_Requirement__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Specific definition of the project control requirement</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>