force-app/main/default/objects/Project_Control_Requirement__c/fields/Framework__c.field-meta.xml
<CustomField>
    <fullName>Framework__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relationship to top level Project Framework</description>
    <label>Framework</label>
    <referenceTo>Project_Framework__c</referenceTo>
    <relationshipLabel>Project Control Requirements</relationshipLabel>
    <relationshipName>Project_Control_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>