force-app/main/default/objects/Project_Control_Requirement__c/fields/Project_Control__c.field-meta.xml
<CustomField>
    <fullName>Project_Control__c</fullName>
    <description>Relationship to Parent Project Control</description>
    <label>Project Control</label>
    <referenceTo>Project_Control__c</referenceTo>
    <relationshipLabel>Project Control Requirements</relationshipLabel>
    <relationshipName>Project_Control_Requirements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>